# BachelorProject

./: .dockerignore  .gitignore  CARTPOLETHESISUPDATED.txt  README.md  docker-compose.yaml  license.txt  pyproject.toml
bachelorproject/: configobject.py  experiment.py  experiment_cartpole.py  experiment_lunarlander.py  gp_model_checkpoint.pth  gp_model_checkpoint_deep_gp.pth  gp_model_checkpoint_variational_gp.pth  main.py
bachelorproject/common/: rlutil.py
configs/: config_CartPole-v1.yaml  config_LunarLander-v2.yaml
docker/: Dockerfile
experimental/: main.py  rlutil.py
module/: info.txt
notebooks/: GP.ipynb  GPviz.ipynb  OnlineGP.ipynb  OnlineGP2.ipynb  OnlineGPUpdates.ipynb  OnlineVecGP2.ipynb  OnlineVecGPBotorch.ipynb  SB.ipynb  VecGP.ipynb  botorchtest.ipynb  complexityanalysis.ipynb  dataframetest.ipynb  deepGPs.ipynb  deepGPs2.ipynb  deepgp2.ipynb  dqntest.ipynb  energymeasurementdemo.ipynb  envnormtest.ipynb  gengrid.ipynb  gp_prior.ipynb  gpstepfunction.ipynb  gpviz2.ipynb  gpvizfinal.ipynb  highdimviztest.ipynb  inputtransfrom.ipynb  kernelcheck.ipynb  mixedvariationalgpdemo.ipynb  normalizetest.ipynb  raytunedemo.ipynb  replay.ipynb  sparsification.ipynb  statstest.ipynb  test.ipynb  torchrl.ipynb  torchrldemo.ipynb  tsnetest.ipynb  variationalGPGpytorch.ipynb  variationalGPGpytorchOLD.ipynb  variationalGPs.ipynb
other/: gpregressiontest.py  gymtest.py  hydratest.py  modified_config.yaml  pytorch-gpu-test.py  pytorch_gpu_test.py
sample_videos/: CARTPOLE_DQN_LINEAR.gif:Zone.Identifier  CARTPOLE_DQN_MLP.gif:Zone.Identifier  CARTPOLE_GPQ_DGP.gif:Zone.Identifier  CARTPOLE_GPQ_SVGP.gif:Zone.Identifier  CARTPOLE_RANDOM.gif:Zone.Identifier  LUJAR_LANDER_DQN_LINEAR_FAIL.gif:Zone.Identifier  LUNAR_LANDER_DQN_MLP_SUCCESS.gif:Zone.Identifier  LUNAR_LANDER_DQN_MLP_SUCCESS2.gif:Zone.Identifier  LUNAR_LANDER_GPQ_DGP_FAIL.gif:Zone.Identifier  LUNAR_LANDER_GPQ_DGP_SUCCESS.gif:Zone.Identifier  LUNAR_LANDER_GPQ_SVGP_FAIL.gif:Zone.Identifier  LUNAR_LANDER_GPQ_SVGP_OK.gif:Zone.Identifier  LUNAR_LANDER_GPSARSA_DGP_FAIL.gif:Zone.Identifier  LUNAR_LANDER_GPSARSA_DGP_SUCCESS.gif:Zone.Identifier  LUNAR_LANDER_RANDOM.gif:Zone.Identifier
util/: config.yaml  dump.py  hydratest.py  make_vec_normalized_env.py  memory_usage.py  processstate.py  save.py  usageplotter.py  welford.py
videos/: experiment_CARTPOLE_THESIS_UPDATED_DQN (MLP)-step-500-to-step-1500.meta.json  (+246 more)
(+449 files in other folders)
