[tool.poetry]
name = "bachelorproject"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.2.0"
pandas = "^2.1.3"
more-itertools = "^10.1.0"
scipy = "^1.12.0"
gpytorch="^1.11"
gymnasium = { version = "^0.29.1", extras = ["box2d"] }
matplotlib="^3.8.2"
notebook="^7.1.0"
ipykernel="^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
